# opengl

./: .clang-format  .gitignore  CMakeLists.txt  README.md  mise.toml
.zed/: settings.json
assets/shaders/: base.frag  base.vert
scripts/: build.sh  run.sh
shaders/: fragment.glsl  fragment_yellow.glsl  vertex.glsl
src/: glad.cpp  main.c  main.cpp
src/engine/: app.cpp  app.hpp  engine.c  engine.cpp  engine.hpp  gfx.c  state.cpp  state.hpp  utils.c  utils.cpp  utils.hpp  window.c
src/engine/gfx/: gfx.c  textures.c
src/engine/include/: engine-definitions.h  engine.h  gfx.h  textures.h  utils.h  window.h
src/engine/state/: mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
src/include/glad/: glad.h
src/shaders/: base.frag  base.vert
